<resources>
    <string name="app_name">NanoEvents</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="set_title">Set Title</string>
    <string name="log_in">Log In</string>
    <string name="you_dont_have_an_account_yet">You dont have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="appNameCaps">NANO EVENTS</string>
    <string name="createEventCaps">CREATE EVENT</string>
    <string name="addEvent">Add Event</string>
    <string name="setTitle">Set Title</string>
    <string name="description">Description</string>
    <string name="select">Select</string>
    <string name="category">Category</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>