<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nanoEvents"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreateEventActivity">


    <TextView
        android:id="@+id/createEventsTxt"
        android:layout_width="323dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/createEventCaps"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setTitleTxt"
        android:layout_width="323dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:text="@string/setTitle"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="72dp"
        android:background="@color/blueCatSalud"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setTitleTxt" />

    <TextView
        android:id="@+id/description"
        android:layout_width="323dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="8dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="72dp"
        android:background="@color/blueCatSalud"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/category"
        android:layout_width="323dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="8dp"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/categorySelectBtn"
        android:layout_width="265dp"
        android:layout_height="203dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />







</androidx.constraintlayout.widget.ConstraintLayout>